# ChangeLog for dev-embedded/openocd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/openocd/ChangeLog,v 1.55 2015/06/01 04:21:16 vapier Exp $

  01 Jun 2015; Mike Frysinger <vapier@gentoo.org> openocd-9999.ebuild:
  Require texinfo-5 for 9999 ebuilds #549946 by Alexander Stein.

*openocd-0.9.0 (20 May 2015)

  20 May 2015; Mike Frysinger <vapier@gentoo.org> +openocd-0.9.0.ebuild,
  openocd-9999.ebuild:
  Version bump from Chromium OS.

  20 May 2015; Mike Frysinger <vapier@gentoo.org> openocd-0.8.0.ebuild,
  openocd-9999.ebuild:
  Fix typo in usb blaster configure flag #524932 by Marek Czerski.

  17 Jun 2014; Mike Frysinger <vapier@gentoo.org> openocd-0.8.0.ebuild,
  openocd-9999.ebuild:
  Add arm love.

  17 May 2014; Markos Chandras <hwoarang@gentoo.org> openocd-0.8.0.ebuild,
  openocd-9999.ebuild:
  Fix typo for --enable-usb_blaster_libftdi thanks to Paul Fertser
  <fercerpav@gmail.com>

*openocd-0.8.0 (09 May 2014)

  09 May 2014; Markos Chandras <hwoarang@gentoo.org>
  +files/openocd-0.8.0-jimtcl-0.75.patch, +openocd-0.8.0.ebuild,
  -openocd-0.8.0_rc2.ebuild, openocd-9999.ebuild:
  Version bump. Bump jimtcl dependency to 0.75

  04 May 2014; Markos Chandras <hwoarang@gentoo.org> metadata.xml,
  openocd-0.8.0_rc2.ebuild, openocd-9999.ebuild:
  Fix typo. Remove sed for version.texi. Add Paul Fertser <fercerpav@gmail.com>
  to metadata.xml so he is CC'd on bugs

  03 May 2014; Markos Chandras <hwoarang@gentoo.org> metadata.xml,
  openocd-0.8.0_rc2.ebuild, openocd-9999.ebuild:
  Massive ebuild improvements and clean up thanks to Paul Fertser
  <fercerpav@gmail.com> on bug #500350. No need for revbump as this will be
  removed soon in favor of final 0.8.0

*openocd-0.8.0_rc2 (26 Apr 2014)

  26 Apr 2014; Markos Chandras <hwoarang@gentoo.org> +openocd-0.8.0_rc2.ebuild,
  -openocd-0.8.0_rc1.ebuild, openocd-9999.ebuild: