@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>dev-embedded</herd>
-<maintainer>
-	<email>fercerpav@gmail.com</email>
-	<name>Paul Fertser</name>
-	<description>Upstream contact. CC him on bugs</description>
-</maintainer>
-<use>
-  <flag name='blaster'>Enable support for Altera USE-Blaster</flag>
-  <flag name='cmsis-dap'>Support for CMSIS-DAP compliant adapters</flag>
-  <flag name="dummy">Build the dummy port driver</flag>
-  <flag name="minidriver">Build the dummy minidriver</flag>
-  <flag name='ftd2xx'>Enable support for USB FTDI chips via <pkg>dev-embedded/libftd2xx</pkg></flag>
-  <flag name='ftdi'>Enable support for USB FTDI chips via <pkg>dev-embedded/libftdi</pkg></flag>
-  <flag name='parport'>Enable support for parport JTAG devices</flag>
-  <flag name='presto'>Enable support for AXIS PRESTO devices</flag>
-  <flag name='segger'>Enable support for the Segger J-Link JTAG</flag>
-  <flag name='stlink'>Enable building support for the ST-Link JTAG Programmer</flag>
-  <flag name='versaloon'>Enable building support for the Versallon-lInk JTAG</flag>
-  <flag name='verbose-io'>Verbose IO and comm JTAG and USB messages</flag>
-</use>
+	<herd>dev-embedded</herd>
+	<maintainer>
+		<email>fercerpav@gmail.com</email>
+		<name>Paul Fertser</name>
+		<description>Upstream contact. CC him on bugs</description>
+	</maintainer>
+	<use>
+		<flag name="blaster">Enable support for Altera USE-Blaster</flag>
+		<flag name="cmsis-dap">Support for CMSIS-DAP compliant adapters</flag>
+		<flag name="dummy">Build the dummy port driver</flag>
+		<flag name="minidriver">Build the dummy minidriver</flag>
+		<flag name="ftd2xx">Enable support for USB FTDI chips via <pkg>dev-embedded/libftd2xx</pkg></flag>
+		<flag name="ftdi">Enable support for USB FTDI chips via <pkg>dev-embedded/libftdi</pkg></flag>
+		<flag name="parport">Enable support for parport JTAG devices</flag>
+		<flag name="presto">Enable support for AXIS PRESTO devices</flag>
+		<flag name="segger">Enable support for the Segger J-Link JTAG</flag>
+		<flag name="stlink">Enable building support for the ST-Link JTAG Programmer</flag>
+		<flag name="versaloon">Enable building support for the Versallon-lInk JTAG</flag>
+		<flag name="verbose-io">Verbose IO and comm JTAG and USB messages</flag>
+	</use>
+	<upstream>
+		<remote-id type="sourceforge">openocd</remote-id>
+	</upstream>
 </pkgmetadata>
